--- a/Pages/Administracion/Agregar_Almacenes.page
+++ b/Pages/Administracion/Agregar_Almacenes.page
@@ -83,6 +83,7 @@
 							"IsVisible": true,
 							"Separator": true,
 							"Styles": {
+								"Image": "Button",
 								"Button": "Button"
 							},
 							"Title": "Agregar Almacenes",
